Footer alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ form {
 footer {
   position: fixed;
   bottom: 10px;
-  right: 20px;
+  right: 10px;
   font-family: sans-serif;
   color: #666;
   font-size: .9rem;
@@ -100,7 +100,7 @@ footer a {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   footer {
     font-size: 3vw;
   }
